--- a/style.css
+++ b/style.css
@@ -27,6 +27,14 @@ footer{
     height: 50px;
 }
 
+.five-day-card{
+    background-color: blue;
+    border-radius: 10%;
+    color: white;
+    padding: 10px;
+    width: 135%;
+}
+
 
 /* ids */
 
